# Files6

./: .env  docker-compose.yml  pyproject.toml  pytest.ini
config/: settings.py  test_settings.py  urls.py
files/: forms.py  models.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_alter_file_file.py  0002_file_user_folder_user.py  0003_alter_file_file.py  0004_alter_file_file.py
templates/: base.html
templates/files/: home.html
templates/users/: login.html  register.html
tests/: conftest.py  test_login_logout.py  test_registration.py  urls.py
users/: forms.py  services.py  signals.py  urls.py  validators.py  views.py
users/management/commands/: ensure_minio_bucket.py
