[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.28",
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-redis>=7.0.0",
    "django-storages>=1.14.6",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
