[project]
name = "files"
version = "0.1.0"
description = "File management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-redis>=7.0.0",
    "django-storages>=1.14.6",
    "boto3>=1.43.28",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "celery>=5.6.3",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "django-stubs[compatible-mypy]>=6.0.5",
]

# Не указываем build-system - uv не будет пытаться собрать пакет